# underworld_core

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: basic_goblin.rs  describe_room.rs  game.rs  random_character.rs  serialize_room.rs  serialize_vampire_kobold.rs  vampire_kobold.rs
fixtures/: game.json
src/: actions.rs  components.rs  errors.rs  events.rs  game.rs  generators.rs  handlers.rs  lib.rs  utils.rs
src/actions/: action.rs  attack_npc.rs  cast_spell_on_npc.rs  cast_spell_on_player.rs  exit_room.rs  inspect_fixture.rs  inspect_npc.rs  look_at.rs  look_at_current_room.rs  look_at_fixture.rs  look_at_npc.rs  loot_fixture.rs  loot_npc.rs  mod.rs  move_player_item.rs  open_fixture.rs  open_fixture_hidden_compartment.rs  pick_up_item.rs  quick_look.rs  sell_player_item.rs  throw_item_at_npc.rs  use_item_on_player.rs
src/components/: attack.rs  character.rs  character_item.rs  damage.rs  defense.rs  descriptor_tags.rs  dimension_descriptors.rs  dimensions.rs  effects.rs  equipment.rs  equipped.rs  equipped_item.rs  fixtures.rs  games.rs  ghost.rs  health.rs  height_descriptor.rs  identifier.rs  inventory.rs  item.rs  item_descriptor.rs  item_material.rs  item_tag.rs  items.rs  life_modifier.rs  material.rs  mod.rs  name.rs  non_player.rs  object.rs  object_descriptor.rs  object_tag.rs  player.rs  room.rs  rooms.rs  size.rs  species.rs  stats.rs  tag.rs  weapon.rs  (+4 more)
src/errors/: error.rs  exit_not_found_error.rs  fixture_not_found_error.rs  invalid_id_error.rs  item_not_directly_usable.rs  item_not_found_error.rs  mod.rs  npc_not_found_error.rs  player_is_dead_error.rs  spell_not_found_error.rs  too_many_weapons_equipped_error.rs
src/events/: dead_npc_beaten.rs  event.rs  fixture_can_be_opened_discovered.rs  fixture_contained_discovered.rs  fixture_has_hidden_compartment_discovered.rs  fixture_has_hidden_discovered.rs  fixture_hidden_compartment_opened.rs  fixture_hidden_items_discovered.rs  fixture_opened.rs  fixture_viewed.rs  ghost_escapes_to_the_void.rs  item_taken_from_fixture.rs  item_taken_from_npc.rs  mod.rs  npc_damaged_by_poison.rs  npc_health_discovered.rs  npc_hidden_discovered.rs  npc_hit.rs  npc_item_destroyed.rs  npc_killed.rs  npc_missed.rs  npc_name_discovered.rs  npc_packed_discovered.rs  npc_poison_effect_dissipated.rs  npc_poison_effect_duration_changed.rs  npc_poison_level_changed.rs  npc_poisoned.rs  npc_viewed.rs  npc_weapon_readied.rs  player_gains_resurrection_aura.rs  player_gains_retribution_aura.rs  player_gains_shield_aura.rs  (+19 more)
(+132 files in other folders)
