[package]
name = "underworld_core"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy_ecs = { version = "0.7.0", optional = true }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"], optional = true }
serde_json = { version = "1.0.81", optional = true }
uuid = { version = "1.1.1", features = ["v4", "fast-rng", "serde"] }
poem-openapi = { version = "2.0.0", optional = true }
strum = "0.24"
strum_macros = "0.24"

[features]
bevy_components = ["bevy_ecs"]
serialization = ["serde"]
json = [ "serde_json" ]
openapi = ["poem-openapi"]
