[package]
name = "underworld_core"
version = "0.6.1"
edition = "2021"
description = "Small library to either play a game or assist in generating rooms"
license = "MIT"
keywords = ["gamedev"]
readme = "README.md"
repository = "https://github.com/SpinningGoblin/underworld_core"
exclude = ["/fixtures", "/.github", "/.vscode", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy_ecs = { version = "0.9", optional = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.3", features = ["v4", "fast-rng", "serde"] }
poem-openapi = { version = "2.0", optional = true }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"

[features]
bevy_components = ["bevy_ecs"]
serialization = ["serde"]
json = [ "serde_json" ]
openapi = ["poem-openapi"]
